Modificado index.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
 
 <title>CNR Viajes</title>
 
-<body></body>
+<body>
+    <nav></nav>
+    
+    <div id="main"></div>
 
-<footer>
-    <p>TP grupal para el curso de Codo a Codo 4.0 Fullstack Python, segundo cuatrimestre 2022. Alumnas: Marcela Chapo, Ailin Nicliz, Agustina Roldán. Grupo 30 Comisión 22537. Profesor: Tomás Kürten Pérez.</p>
-</footer>
+    <footer>
+        <p>TP grupal para el curso de Codo a Codo 4.0 Fullstack Python, segundo cuatrimestre 2022. Alumnas: Marcela Chapo, Ailin Nicliz, Agustina Roldán. Grupo 30 Comisión 22537. Profesor: Tomás Kürten Pérez.</p>
+    </footer>
+</body>
+
+
 </html>
