Modificado footer flexbox en styles.css

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <footer>
         <p>TP grupal para el curso de Codo a Codo 4.0 Fullstack Python, segundo cuatrimestre 2022. Alumnas: Marcela Chapo, Ailin Nicliz, Agustina Roldán. Grupo 30 Comisión 22537. Profesor: Tomás Kürten Pérez.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ipsa fugiat quae ad sunt voluptates placeat quo. Omnis dolorem quaerat sit tenetur itaque nam veniam, dicta aut animi numquam quasi.</p>
     </footer>
 </body>
 
