Creado menu en index.html, modificado css en styles.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 <title>CNR Viajes</title>
 
 <body>
-    <nav></nav>
+    <nav id="menu">
+        <div id="logo"></div>
+        <ul>
+            <li>Inicio</li>
+            <li>Información</li>
+            <li>Promociones</li>
+            <li>Contacto</li>
+        </ul>
+    </nav>
     
     <div id="main"></div>
 
