--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <script src="https://kit.fontawesome.com/09e7b012e5.js" crossorigin="anonymous"></script>
     </head>
 
 <title>CNR Viajes</title>
 
 <body>
     <nav id="menu">
-        <div id="logo"></div>
+        <div id="logo"><i class="fa-solid fa-mountain-sun"></i></div>
         <ul>
             <li>Inicio</li>
             <li>Información</li>
