Modificado logo y styles.css

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <script src="https://kit.fontawesome.com/09e7b012e5.js" crossorigin="anonymous"></script>
     </head>
 
-<title>CNR Viajes</title>
+<title>Otter Viajes</title>
 
 <body>
     <nav id="menu">
-        <div id="logo"><i class="fa-solid fa-mountain-sun"></i></div>
+        <div id="logo"><img src="imagenes/otter-solid.svg"></div>
         <ul>
             <li>Inicio</li>
             <li>Información</li>
