--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/09e7b012e5.js" crossorigin="anonymous"></script>
     </head>
 
@@ -10,7 +13,7 @@
 
 <body>
     <nav id="menu">
-        <div id="logo"><img src="imagenes/otter-solid.svg"></div>
+        <div id="logo"><img src="imagenes/otter-solid.svg"><h1>Otter Viajes</h1></div>
         <ul>
             <li>Inicio</li>
             <li>Información</li>
