Modificado index.html para incluir nueva imágen y cuatro artículos

--- a/index.html
+++ b/index.html
@@ -21,8 +21,27 @@
             <li>Contacto</li>
         </ul>
     </nav>
+
+    <div class="encabezado"><img src="imagenes/chica-y-mar.jpg" alt="Mujer observando el mar desde un crucero"></div>
     
-    <div id="main"></div>
+    <div id="main">
+        <article class="notas">
+            <h2>Título del Articulo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ea doloribus animi minima facere vel numquam esse nobis autem. Rem beatae similique sapiente? Suscipit ex nam excepturi, minus dolores aliquam!</p>
+        </article>
+        <article class="notas">
+            <h2>Título del Articulo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ea doloribus animi minima facere vel numquam esse nobis autem. Rem beatae similique sapiente? Suscipit ex nam excepturi, minus dolores aliquam!</p>
+        </article>
+        <article class="notas">
+            <h2>Título del Articulo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ea doloribus animi minima facere vel numquam esse nobis autem. Rem beatae similique sapiente? Suscipit ex nam excepturi, minus dolores aliquam!</p>
+        </article>
+        <article class="notas">
+            <h2>Título del Articulo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ea doloribus animi minima facere vel numquam esse nobis autem. Rem beatae similique sapiente? Suscipit ex nam excepturi, minus dolores aliquam!</p>
+        </article>
+    </div>
 
     <footer>
         <p>TP grupal para el curso de Codo a Codo 4.0 Fullstack Python, segundo cuatrimestre 2022. Alumnas: Marcela Chapo, Ailin Nicliz, Agustina Roldán. Grupo 30 Comisión 22537. Profesor: Tomás Kürten Pérez.</p>
