--- a/index.html
+++ b/index.html
@@ -26,26 +26,32 @@
     
     <div id="main">
         <article class="notas">
-            <h2>Título del Articulo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ea doloribus animi minima facere vel numquam esse nobis autem. Rem beatae similique sapiente? Suscipit ex nam excepturi, minus dolores aliquam!</p>
+            <h2>Desde el Puerto de Buenos Aires: los precios para tomar un crucero, que siguen a valores similares a los de hace tres años</h2>
+            <p>Después de dos años, este verano vuelven los grandes barcos a la terminal porteña, con itinerarios por Brasil, la Patagonia y la Antártida; sin aéreos y con la posibilidad de disfrutar tarifas prepandemia, que todavía no se recuperaron en dólares</p>
         </article>
         <article class="notas">
-            <h2>Título del Articulo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ea doloribus animi minima facere vel numquam esse nobis autem. Rem beatae similique sapiente? Suscipit ex nam excepturi, minus dolores aliquam!</p>
+            <h2>Turismo: expectativas y desafíos en Catamarca</h2>
+            <p>La provincia decidió apostar al posicionamiento del destino, que es para muchos uno de los secretos naturales mejores guardados del país.</p>
         </article>
         <article class="notas">
-            <h2>Título del Articulo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ea doloribus animi minima facere vel numquam esse nobis autem. Rem beatae similique sapiente? Suscipit ex nam excepturi, minus dolores aliquam!</p>
+            <h2>Cuánto costará vacacionar en Río de Janeiro tras la apertura de la nueva ruta aérea desde Mendoza</h2>
+            <p>A partir de enero, la provincia contará con vuelos directos a esa ciudad brasileña, con dos frecuencias semanales.</p>
         </article>
         <article class="notas">
-            <h2>Título del Articulo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ea doloribus animi minima facere vel numquam esse nobis autem. Rem beatae similique sapiente? Suscipit ex nam excepturi, minus dolores aliquam!</p>
+            <h2>Estambul, destino turístico nº 1 de Europa este verano</h2>
+            <p>Estambul es el único destino de Europa que se recupera de la pandemia y consigue recibir más turistas que en 2019.</p>
         </article>
     </div>
 
     <footer>
         <p>TP grupal para el curso de Codo a Codo 4.0 Fullstack Python, segundo cuatrimestre 2022. Alumnas: Marcela Chapo, Ailin Nicliz, Agustina Roldán. Grupo 30 Comisión 22537. Profesor: Tomás Kürten Pérez.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ipsa fugiat quae ad sunt voluptates placeat quo. Omnis dolorem quaerat sit tenetur itaque nam veniam, dicta aut animi numquam quasi.</p>
+        <div>
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+        <p>943 Av. Cabildo, Buenos Aires
+        </p>
     </footer>
 </body>
 
