--- a/index.html
+++ b/index.html
@@ -44,14 +44,16 @@
     </div>
 
     <footer>
+        <div id="contenedor-footer">
         <p>TP grupal para el curso de Codo a Codo 4.0 Fullstack Python, segundo cuatrimestre 2022. Alumnas: Marcela Chapo, Ailin Nicliz, Agustina Roldán. Grupo 30 Comisión 22537. Profesor: Tomás Kürten Pérez.</p>
-        <div>
+        <p>
             <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
             <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://www.twitter.com/"><i class="fa-brands fa-twitter"></i></a>
-        </div>
+        </p>
         <p>943 Av. Cabildo, Buenos Aires
         </p>
+        </div>
     </footer>
 </body>
 
