Añadido links en index.html a el resto de las páginas, modificado styles.css en varias partes

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
 <body>
     <nav id="menu">
-        <div id="logo"><img src="imagenes/otter-solid.svg"><h1>Otter Viajes</h1></div>
+        <a href="index.html"><div id="logo"><img src="imagenes/otter-solid.svg"><h1>Otter Viajes</h1></div></a>
         <ul>
-            <li>Inicio</li>
-            <li>Información</li>
-            <li>Promociones</li>
-            <li>Contacto</li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="informacion.html">Información</a></li>
+            <li><a href="promociones">Promociones</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
 
