Modificado navbar en todas las paginas html

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <nav id="menu">
         <a href="index.html"><div id="logo"><img src="imagenes/otter-solid.svg"><h1>Otter Viajes</h1></div></a>
         <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="informacion.html">Información</a></li>
-            <li><a href="promociones">Promociones</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
+            <a href="index.html"><li>Inicio</li></a>
+            <a href="informacion.html"><li>Información</li></a>
+            <a href="promociones.html"><li>Promociones</li></a>
+            <a href="contacto.html"><li>Contacto</li></a>
         </ul>
     </nav>
 
