Modificado contacto.html con nuevo contenido

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="encabezado"><img src="imagenes/chica-y-mar.jpg" alt="Mujer observando el mar desde un crucero"></div>
     
-    <div id="main">
+    <div class="main">
         <article class="notas">
             <h2>Desde el Puerto de Buenos Aires: los precios para tomar un crucero, que siguen a valores similares a los de hace tres años</h2>
             <p>Después de dos años, este verano vuelven los grandes barcos a la terminal porteña, con itinerarios por Brasil, la Patagonia y la Antártida; sin aéreos y con la posibilidad de disfrutar tarifas prepandemia, que todavía no se recuperaron en dólares</p>
