Corregidos errores varios de css en informacion.html y modificados los demas html

--- a/informacion.html
+++ b/informacion.html
@@ -22,10 +22,8 @@
                 <a href="contacto.html"><li>Contacto</li></a>
             </ul>
         </nav>
-
-    <div class="encabezado"><img src="imagenes/otter-solid.svg" alt="Mujer observando el mar desde un crucero"></div>
-    
-    <div id="main">
+        
+    <div class="main">
         <H2>INFO</H2>
     </div>
 
