--- a/promociones.html
+++ b/promociones.html
@@ -23,9 +23,9 @@
         </ul>
     </nav>
 
-    <div class="encabezado"><img src="imagenes/otter-solid.svg" alt="Mujer observando el mar desde un crucero"></div>
+    <div class="encabezado"><img src="imagenes/crucero.jpg" alt="Crucero navegando con colinas de fondo"></div>
     
-    <div id="main">
+    <div class="main">
         <h2>PROMOS</h2>
     </div>
 
