--- a/noticias.html
+++ b/noticias.html
@@ -13,18 +13,19 @@
 <title>Otter Viajes</title>
 
 <body>
-        <nav id="menu">
-            <a href="index.html"><div id="logo"><img src="imagenes/otter-solid.svg"><h1>Otter Viajes</h1></div></a>
-            <ul>
-                <a href="index.html"><li>Inicio</li></a>
-                <a href="informacion.html"><li>Información</li></a>
-                <a href="promociones.html"><li>Promociones</li></a>
-                <a href="contacto.html"><li>Contacto</li></a>
-            </ul>
-        </nav>
-        
+    <nav id="menu">
+        <a href="index.html"><div id="logo"><img src="imagenes/otter-solid.svg"><h1>Otter Viajes</h1></div></a>
+        <ul>
+            <a href="index.html"><li>Inicio</li></a>
+            <a href="paquetes.html"><li>Paquetes</li></a>
+            <a href="noticias.html"><li>Noticias</li></a>
+            <a href="contacto.html"><li>Contacto</li></a>
+        </ul>
+    </nav>
+
+    
     <div class="main">
-        <H2>INFO</H2>
+        <h2>NOTICIAS</h2>
     </div>
 
     <footer>
