--- a/paquetes.html
+++ b/paquetes.html
@@ -13,20 +13,21 @@
 <title>Otter Viajes</title>
 
 <body>
-    <nav id="menu">
-        <a href="index.html"><div id="logo"><img src="imagenes/otter-solid.svg"><h1>Otter Viajes</h1></div></a>
-        <ul>
-            <a href="index.html"><li>Inicio</li></a>
-            <a href="informacion.html"><li>Información</li></a>
-            <a href="promociones.html"><li>Promociones</li></a>
-            <a href="contacto.html"><li>Contacto</li></a>
-        </ul>
-    </nav>
+        <nav id="menu">
+            <a href="index.html"><div id="logo"><img src="imagenes/otter-solid.svg"><h1>Otter Viajes</h1></div></a>
+            <ul>
+                <a href="index.html"><li>Inicio</li></a>
+                <a href="paquetes.html"><li>Paquetes</li></a>
+                <a href="Noticias.html"><li>Noticias</li></a>
+                <a href="contacto.html"><li>Contacto</li></a>
+            </ul>
+        </nav>
 
-    <div class="encabezado"><img src="imagenes/crucero.jpg" alt="Crucero navegando con colinas de fondo"></div>
-    
     <div class="main">
-        <h2>PROMOS</h2>
+
+        <div class="encabezado"><img src="imagenes/crucero.jpg" alt="Crucero navegando con colinas de fondo"></div>
+
+        <H2>PAQUETES</H2>
     </div>
 
     <footer>
