--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <a href="index.html"><div id="logo"><img src="imagenes/otter-solid.svg"><h1>Otter Viajes</h1></div></a>
         <ul>
             <a href="index.html"><li>Inicio</li></a>
-            <a href="informacion.html"><li>Información</li></a>
-            <a href="promociones.html"><li>Promociones</li></a>
+            <a href="paquetes.html"><li>Paquetes</li></a>
+            <a href="noticias.html"><li>Noticias</li></a>
             <a href="contacto.html"><li>Contacto</li></a>
         </ul>
     </nav>
