Modificado notas, pasaron a la sección noticias.html, modificado css

--- a/index.html
+++ b/index.html
@@ -26,22 +26,8 @@
     <div class="encabezado"><img src="imagenes/chica-y-mar.jpg" alt="Mujer observando el mar desde un crucero"></div>
     
     <div class="main">
-        <article class="notas">
-            <h2>Desde el Puerto de Buenos Aires: los precios para tomar un crucero, que siguen a valores similares a los de hace tres años</h2>
-            <p>Después de dos años, este verano vuelven los grandes barcos a la terminal porteña, con itinerarios por Brasil, la Patagonia y la Antártida; sin aéreos y con la posibilidad de disfrutar tarifas prepandemia, que todavía no se recuperaron en dólares</p>
-        </article>
-        <article class="notas">
-            <h2>Turismo: expectativas y desafíos en Catamarca</h2>
-            <p>La provincia decidió apostar al posicionamiento del destino, que es para muchos uno de los secretos naturales mejores guardados del país.</p>
-        </article>
-        <article class="notas">
-            <h2>Cuánto costará vacacionar en Río de Janeiro tras la apertura de la nueva ruta aérea desde Mendoza</h2>
-            <p>A partir de enero, la provincia contará con vuelos directos a esa ciudad brasileña, con dos frecuencias semanales.</p>
-        </article>
-        <article class="notas">
-            <h2>Estambul, destino turístico nº 1 de Europa este verano</h2>
-            <p>Estambul es el único destino de Europa que se recupera de la pandemia y consigue recibir más turistas que en 2019.</p>
-        </article>
+        <h2>HOME</h2>
+        
     </div>
 
     <footer>
