Modificado styles.css con estilos de texto y link nuevos

--- a/noticias.html
+++ b/noticias.html
@@ -29,22 +29,22 @@
         <article class="notas">
             <h3>Desde el Puerto de Buenos Aires: los precios para tomar un crucero, que siguen a valores similares a los de hace tres años</h3>
             <p>Después de dos años, este verano vuelven los grandes barcos a la terminal porteña, con itinerarios por Brasil, la Patagonia y la Antártida; sin aéreos y con la posibilidad de disfrutar tarifas prepandemia, que todavía no se recuperaron en dólares</p>
-            <div class="footernota"><p class="link2">Seguir leyendo</p><i class="fa-solid fa-arrow-right"></i></div>
+            <a href=""><div class="footernota"><p class="link2">Seguir leyendo</p><i class="fa-solid fa-arrow-right"></i></div></a>
         </article>
         <article class="notas">
             <h3>Turismo: expectativas y desafíos en Catamarca</h3>
             <p>La provincia decidió apostar al posicionamiento del destino, que es para muchos uno de los secretos naturales mejores guardados del país.</p>
-            <div class="footernota"><p class="link2">Seguir leyendo</p><i class="fa-solid fa-arrow-right"></i></div>
+            <a href=""><div class="footernota"><p class="link2">Seguir leyendo</p><i class="fa-solid fa-arrow-right"></i></div></a>
         </article>
         <article class="notas">
             <h3>Cuánto costará vacacionar en Río de Janeiro tras la apertura de la nueva ruta aérea desde Mendoza</h3>
             <p>A partir de enero, la provincia contará con vuelos directos a esa ciudad brasileña, con dos frecuencias semanales.</p>
-            <div class="footernota"><p class="link2">Seguir leyendo</p><i class="fa-solid fa-arrow-right"></i></div>
+            <a href=""><div class="footernota"><p class="link2">Seguir leyendo</p><i class="fa-solid fa-arrow-right"></i></div></a>
         </article>
         <article class="notas">
             <h3>Estambul, destino turístico nº 1 de Europa este verano</h3>
             <p>Estambul es el único destino de Europa que se recupera de la pandemia y consigue recibir más turistas que en 2019.</p>
-            <div class="footernota"><p class="link2">Seguir leyendo</p><i class="fa-solid fa-arrow-right"></i></div>
+            <a href=""><div class="footernota"><p class="link2">Seguir leyendo</p><i class="fa-solid fa-arrow-right"></i></div></a>
         </article>
     </div>
 
