--- a/noticias.html
+++ b/noticias.html
@@ -13,7 +13,7 @@
 <title>Otter Viajes</title>
 
 <body>
-    <nav id="menu">
+    <nav class="menu">
         <a href="index.html"><div id="logo"><img src="imagenes/otter-solid.svg"><h1>Otter Viajes</h1></div></a>
         <ul>
             <a href="index.html"><li>Inicio</li></a>
@@ -23,9 +23,9 @@
         </ul>
     </nav>
 
+<h2>NOTICIAS</h2>
     
     <div class="main">
-        <h2>NOTICIAS</h2>
         <article class="notas">
             <h3>Desde el Puerto de Buenos Aires: los precios para tomar un crucero, que siguen a valores similares a los de hace tres años</h3>
             <p>Después de dos años, este verano vuelven los grandes barcos a la terminal porteña, con itinerarios por Brasil, la Patagonia y la Antártida; sin aéreos y con la posibilidad de disfrutar tarifas prepandemia, que todavía no se recuperaron en dólares</p>
