--- a/paquetes.html
+++ b/paquetes.html
@@ -13,7 +13,7 @@
 <title>Otter Viajes</title>
 
 <body>
-        <nav id="menu">
+        <nav class="menu">
             <a href="index.html"><div id="logo"><img src="imagenes/otter-solid.svg"><h1>Otter Viajes</h1></div></a>
             <ul>
                 <a href="index.html"><li>Inicio</li></a>
@@ -23,11 +23,12 @@
             </ul>
         </nav>
 
-    <div class="main">
-
         <div class="encabezado"><img src="imagenes/crucero.jpg" alt="Crucero navegando con colinas de fondo"></div>
 
         <H2>PAQUETES</H2>
+
+    <div class="main">
+
     </div>
 
     <footer>
