--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <title>Otter Viajes</title>
 
 <body>
-    <nav id="menu">
+    <nav class="menu">
         <a href="index.html"><div id="logo"><img src="imagenes/otter-solid.svg"><h1>Otter Viajes</h1></div></a>
         <ul>
             <a href="index.html"><li>Inicio</li></a>
@@ -25,8 +25,9 @@
 
     <div class="encabezado"><img src="imagenes/chica-y-mar.jpg" alt="Mujer observando el mar desde un crucero"></div>
     
+    <h2>HOME</h2>
+
     <div class="main">
-        <h2>HOME</h2>
         
     </div>
 
