Añadidas varias imagenes nuevas, armando un nuevo menu de navegación

--- a/paquetes.html
+++ b/paquetes.html
@@ -13,15 +13,29 @@
 <title>Otter Viajes</title>
 
 <body>
-        <nav class="menu">
-            <a href="index.html"><div id="logo"><img src="imagenes/otter-solid.svg"><h1>Otter Viajes</h1></div></a>
+        <!-- <nav class="menu">
+            <a href="index.html"><div id="logo"><img src="imagenes/ottertravel icono.svg"></div></a>
             <ul>
                 <a href="index.html"><li>Inicio</li></a>
                 <a href="paquetes.html"><li>Paquetes</li></a>
                 <a href="Noticias.html"><li>Noticias</li></a>
                 <a href="contacto.html"><li>Contacto</li></a>
             </ul>
+        </nav> -->
+
+        <nav class="menu2">
+            <a href="index.html"><i id="otterlogo" class="fa-solid fa-otter"></i></a>
+            <a href="index.html"><div id="logo"><img src="imagenes/ottertravel icono.svg"></div></a>
+                <div class="menuitem-container">
+                <a href="index.html"><p class="menuitem">Inicio</p></a>
+                <a href="paquetes.html"><p class="menuitem">Paquetes</p></a>
+                <a href="Noticias.html"><p class="menuitem">Noticias</p></a>
+                <a href="contacto.html"><p class="menuitem">Contacto</p></a>
+                </div>
         </nav>
+
+
+
 
         <div class="encabezado"><img src="imagenes/crucero.jpg" alt="Crucero navegando con colinas de fondo"></div>
 
