--- a/paquetes.html
+++ b/paquetes.html
@@ -24,7 +24,7 @@
         </nav> -->
 
         <nav class="menu2">
-            <a href="index.html"><i id="otterlogo" class="fa-solid fa-otter"></i></a>
+            <a href="index.html"><img id="otterlogo" src="imagenes/otter-solid.svg"></a>
             <a href="index.html"><div id="logo"><img src="imagenes/ottertravel icono.svg"></div></a>
                 <div class="menuitem-container">
                 <a href="index.html"><p class="menuitem">Inicio</p></a>
