Insertado nuevo nav menu en todas las paginas html

--- a/paquetes.html
+++ b/paquetes.html
@@ -13,28 +13,19 @@
 <title>Otter Viajes</title>
 
 <body>
-        <!-- <nav class="menu">
-            <a href="index.html"><div id="logo"><img src="imagenes/ottertravel icono.svg"></div></a>
-            <ul>
-                <a href="index.html"><li>Inicio</li></a>
-                <a href="paquetes.html"><li>Paquetes</li></a>
-                <a href="Noticias.html"><li>Noticias</li></a>
-                <a href="contacto.html"><li>Contacto</li></a>
-            </ul>
-        </nav> -->
 
-        <nav class="menu2">
-            <a href="index.html"><div id="logo"><img src="imagenes/ottertravel icono.svg"></div></a>
+    <nav class="menu2">
+        <a href="index.html"><div id="logo"><img src="imagenes/ottertravel icono.svg"></div></a>
 
-            <a href="index.html"><img id="otterlogo" src="imagenes/otter-solid.svg"></a>
+        <a href="index.html"><img id="otterlogo" src="imagenes/otter-solid.svg"></a>
 
-            <div class="menuitem-container">
-                <a href="index.html"><p class="menuitem">Inicio</p></a>
-                <a href="paquetes.html"><p class="menuitem">Paquetes</p></a>
-                <a href="Noticias.html"><p class="menuitem">Noticias</p></a>
-                <a href="contacto.html"><p class="menuitem">Contacto</p></a>
-            </div>
-        </nav>
+        <div class="menuitem-container">
+            <a href="index.html"><p class="menuitem">INICIO</p></a>
+            <a href="paquetes.html"><p class="menuitem">PAQUETES</p></a>
+            <a href="Noticias.html"><p class="menuitem">NOTICIAS</p></a>
+            <a href="contacto.html"><p class="menuitem">CONTACTO</p></a>
+        </div>
+    </nav>
 
 
 
