--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
 <title>Otter Viajes</title>
 
 <body>
-    <nav class="menu">
-        <a href="index.html"><div id="logo"><img src="imagenes/otter-solid.svg"><h1>Otter Viajes</h1></div></a>
-        <ul>
-            <a href="index.html"><li>Inicio</li></a>
-            <a href="paquetes.html"><li>Paquetes</li></a>
-            <a href="noticias.html"><li>Noticias</li></a>
-            <a href="contacto.html"><li>Contacto</li></a>
-        </ul>
+
+    <nav class="menu2">
+        <a href="index.html"><div id="logo"><img src="imagenes/ottertravel icono.svg"></div></a>
+
+        <a href="index.html"><img id="otterlogo" src="imagenes/otter-solid.svg"></a>
+
+        <div class="menuitem-container">
+            <a href="index.html"><p class="menuitem">INICIO</p></a>
+            <a href="paquetes.html"><p class="menuitem">PAQUETES</p></a>
+            <a href="Noticias.html"><p class="menuitem">NOTICIAS</p></a>
+            <a href="contacto.html"><p class="menuitem">CONTACTO</p></a>
+        </div>
     </nav>
 
     <div class="encabezado"><img src="imagenes/chica-y-mar.jpg" alt="Mujer observando el mar desde un crucero"></div>
