--- a/contacto.html
+++ b/contacto.html
@@ -27,17 +27,23 @@
         </div>
     </nav>
 
-<h2>CONTACTO</h2>
-
-<div class="main">
+    <div class="contenedor-titulo">
     
-    <div class="notas">
-        <h3>Nos encontramos en</h3>
-        <p>943 Av. Cabildo, Buenos Aires<br>TEL: 7645-3242 / 5465-1323</p>
+        <h2 class="titulo-seccion">CONTACTO</h2>
+        <i class="fa-solid fa-message"></i>
+
     </div>
 
-    <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.3810992618173!2d-58.445974400000004!3d-34.56922240000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5c427d9026d%3A0xb857f87b4def8871!2sAv.%20Cabildo%20943%2C%20C1426%20AAJ%2C%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1665528810155!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
+    <div class="main">
+        
+        <div class="contenedor-small">
+        <h3 class="titulo-verde">Nos encontramos en</h3>
+        <p class="texto-gris">943 Av. Cabildo, Buenos Aires<br>TEL: 7645-3242 / 5465-1323</p>
+        </div>
+
+        <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.3810992618173!2d-58.445974400000004!3d-34.56922240000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5c427d9026d%3A0xb857f87b4def8871!2sAv.%20Cabildo%20943%2C%20C1426%20AAJ%2C%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1665528810155!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+    </div>
 
     <footer>
         <div id="contenedor-footer">
@@ -52,6 +58,5 @@
         </div>
     </footer>
 </body>
-
 
 </html>
