Añadidos varios puntos de corte nuevos, estilos de texto y divs ajustados en varias partes

--- a/noticias.html
+++ b/noticias.html
@@ -28,9 +28,16 @@
         </div>
     </nav>
 
-    <h2>NOTICIAS</h2>
+
+<div class="main">
+    <div class="contenedor-titulo">
     
-    <div class="main">
+        <h2 class="titulo-seccion">TE PUEDE INTERESAR</h2>
+        <i class="fa-solid fa-newspaper"></i></i>
+
+    </div>
+    
+    <div class="main-notas">
         <article class="notas">
             <h3>Desde el Puerto de Buenos Aires: los precios para tomar un crucero, que siguen a valores similares a los de hace tres años</h3>
             <p>Después de dos años, este verano vuelven los grandes barcos a la terminal porteña, con itinerarios por Brasil, la Patagonia y la Antártida; sin aéreos y con la posibilidad de disfrutar tarifas prepandemia, que todavía no se recuperaron en dólares</p>
@@ -52,6 +59,7 @@
             <a href=""><div class="footernota"><p class="link2">Seguir leyendo</p><i class="fa-solid fa-arrow-right"></i></div></a>
         </article>
     </div>
+</div>
 
     <footer>
         <div id="contenedor-footer">
