--- a/paquetes.html
+++ b/paquetes.html
@@ -35,6 +35,8 @@
 
     </div>
 
+    <div class="encabezado"><img src="imagenes/chica-y-mar.jpg" alt="Mujer observando el mar desde un crucero"></div>
+
     <footer>
         <div id="contenedor-footer">
         <p>TP grupal para el curso de Codo a Codo 4.0 Fullstack Python, segundo cuatrimestre 2022. Alumnas: Marcela Chapo, Ailin Nicliz, Agustina Roldán. Grupo 30 Comisión 22537. Profesor: Tomás Kürten Pérez.</p>
