Modificado titulos en varias paginas, estilos actualizados

--- a/paquetes.html
+++ b/paquetes.html
@@ -10,7 +10,7 @@
         <script src="script.js"></script>
     </head>
 
-<title>Otter Viajes</title>
+<title>Paquetes</title>
 
 <body>
 
@@ -29,9 +29,14 @@
 
     <div class="encabezado"><img src="imagenes/crucero.jpg" alt="Crucero navegando con colinas de fondo"></div>
 
-    <H2>PAQUETES</H2>
 
     <div class="main">
+        <div class="contenedor-titulo">
+    
+            <h2 class="titulo-seccion">PAQUETES</h2>
+            <i class="fa-solid fa-newspaper"></i></i>
+    
+        </div>
 
     </div>
 
