--- a/noticias.html
+++ b/noticias.html
@@ -23,7 +23,7 @@
         <div class="menuitem-container">
             <a href="index.html"><p class="menuitem">INICIO</p></a>
             <a href="paquetes.html"><p class="menuitem">PAQUETES</p></a>
-            <a href="Noticias.html"><p class="menuitem">NOTICIAS</p></a>
+            <a href="noticias.html"><p class="menuitem">NOTICIAS</p></a>
             <a href="contacto.html"><p class="menuitem">CONTACTO</p></a>
         </div>
     </nav>
