Creado formulario de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -32,19 +32,40 @@
 
         <div class="contenedor-titulo">
     
-            <h2 class="titulo-seccion">CONTACTO</h2>
-            <i class="fa-solid fa-message"></i>
+            <h2 class="titulo-seccion">Donde estamos</h2>
+            <i class="fa-solid fa-location"></i>
     
         </div>
 
         <div class="contenedor-small">
 
         <h3 class="titulo-verde">Nos encontramos en</h3>
-        <p class="texto-gris">943 Av. Cabildo, Buenos Aires<br>TEL: 7645-3242 / 5465-1323</p>
-        </div>
-
+        <p class="texto-gris">943 Av. Cabildo, Buenos Aires<br>TEL: 7645-3242 / 5465-1323<br>E-mail: contacto@ottertravel.com</p><br>
         <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.3810992618173!2d-58.445974400000004!3d-34.56922240000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5c427d9026d%3A0xb857f87b4def8871!2sAv.%20Cabildo%20943%2C%20C1426%20AAJ%2C%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1665528810155!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
         </iframe>
+        </div>
+
+        <div class="contenedor-titulo">
+            <h2 class="titulo-seccion">Contactanos</h2><i class="fa-solid fa-message"></i>
+        </div>
+
+        <form class="contenedor-small">
+            <p class="titulo-verde">Si tenés dudas o consultas, envianos tus datos y nos ponemos en contacto con vos</p>
+            <label for="nombre-contacto" class="texto-gris">Nombre: </label>
+            <input id="nombre-contacto" type="text" value="Nombre"><br>
+            <label for="email-contacto" class="texto-gris">E-mail: </label><input type="email" id="email-contacto"
+            value="E-Mail"><br>
+            <label for="asunto-contacto" class="texto-gris">Asunto: </label><select name=razon>
+                <option value="Elegir">Elegir
+                <option value="Ventas">Ventas
+                <option value="Clientes">Atención al cliente
+                <option value="Reclamos">Reclamos
+            </select><br>
+            <label for="mensaje-contacto" class="texto-gris">Mensaje:</label><br>
+            <input type="text" id="mensaje-contacto"><br>
+            <input type="submit" class="boton1">
+
+        </form>
     </div>
 
     <footer>
